# Scorpio

./: CMakeLists.txt  LICENSE  README.md  model.config  package.xml  tags
launch/: .test_tf.launch.swp  gazebo_scorpio.launch  scorpio_gazebo.launch  scorpio_gazebo_camera.launch  scorpio_gazebo_camera_gripper.launch  test_tf.launch
models/: Scorpio_Kin_robotiq_gripper.urdf
models/blue_cube/: model.config  model.sdf
models/camera/: model.config  model.sdf
models/green_cube/: model.config  model.sdf
models/marble_1_5cm/: model.rsdf  model.sdf
models/realsense_camera_gazebo/: model.config  model.sdf
models/red_cube/: model.config  model.sdf
models/robots/: Scorpio_Kin_robotiq.urdf  Scorpio_Kin_robotiq_gripper.urdf  Scorpio_Kin_robotiq_new.urdf
models/robots/meshes/: base_link.STL  link1.STL  link2.STL  link3.STL  link5.STL  link6.STL  link9.STL  parallel__scorpio_elev1__l2_hull.dae  parallel__scorpio_elev2__l3_hull.dae  scorpio_ground_hull.dae  scorpio_wrist_pitch_hull.dae  scorpio_wrist_skewed_hull.dae  scorpio_yaw1_hull.dae
models/robots/scorpio_with_camera/: model.config
models/tr_box/: model.config  tr_box.sdf  tr_box.stl
models/tr_jar/: model.config  tr_jar.sdf
models/tr_jar2/: model.config  tr_jar.sdf  tr_jar.stl
robots/: Scorpio_Kin_robotiq.sdf  Scorpio_Kin_robotiq.urdf  Scorpio_Kin_robotiq2.sdf  Scorpio_Kin_robotiq_gripper.urdf  Scorpio_Kin_robotiq_new.urdf
robots/camera/: model.sdf
robots/meshes/: link4.STL  link7.STL  link8.STL  parallel__scorpio_elev1__l1_hull.dae  scorpio_wrist_roll_hull.dae  scorpio_yaw2_hull.dae  vacuum.STL
robots/scorpio_with_camera/: model.sdf
src/: scorpio_mock_node.cpp  scorpio_plugin.cpp
srv/: GripperCommandSrv.srv  InterruptSrv.srv
worlds/: scorpio.world  scorpio_pickandplace.world  scorpio_pour.world  scorpio_urdfspawner.world
